2003-07-13  Wakaba  <w@suika.fam.cx>

	* Parser.pm (_parse_start_tag): More default attribute support.
	* EntityManager.pm (get_attr_definitions): Provide information whether attribute declaration may not be read.
	* Error.pm: Some new errors related to attribute default.

2003-07-12  Wakaba  <w@suika.fam.cx>

	* EntityManager.pm (get_attr_definitions): New function.
	* Parser.pm (_parse_start_tag): Complete default attribute value.

2003-07-12  Wakaba  <w@suika.fam.cx>

	* Parser.pm, Error.pm: Reimplemented ELEMENT and ATTLIST declarations.
	* EntityManager.pm (get_external_entity): Normalize line break before
	returning entity replacement text.

2003-07-06  Wakaba  <w@suika.fam.cx>

	* Catalog.pm (_resolve_ext_id_w_catalog_file): Bug fixes:
	- Resort delegated catalog entry files list by length of matching prefix.
	- Add 'next' catalog entry files imeddiately after current file.

2003-07-05  Wakaba  <w@suika.fam.cx>

	* Catalog.pm: New module.
	* EntityManager.pm: Bug fixes such as character class fix.
	* Error.pm (new, raise_error, _get_node_path, _get_node_position): New methods.

2003-06-30  Wakaba  <w@suika.fam.cx>

	* Parser.pm (_parse_start_tag): New.

2003-06-29  Wakaba  <w@suika.fam.cx>

	* Parser.pm (_parse_document_entity, _parse_ignored_section): New.
	* Error.pm: New errors related to marked section.
	* EntityManager.pm (get_entity, get_entities): Bug fixes and caching.
	(is_standalone_document): New function.

2003-06-27  Wakaba  <w@suika.fam.cx>

	* Parser.pm: Give entity type before EntityManager->get_external_entity is called.
	* Error.pm: Added some new errors related to media type values.
	* EntityManager.pm (_guess_entity_encoding, _check_media_type): New.
	(default_uri_resolver): Check and use media type and charset.

2003-06-26  Wakaba  <w@suika.fam.cx>

	* Parser.pm (_parse_xml_or_text_declaration): New method.
	* EntityManager.pm (default_uri_resolver): Use Parser->_parse_xml_or_text_declaration to remove text declaration.