@@ -1,3 +1,8 @@
+2003-07-14  Wakaba  <w@suika.fam.cx>
+
+	* Parser.pm (_validate_notation_declared): Removed.
+	* Validate.pm: New module.
+
 2003-07-13  Wakaba  <w@suika.fam.cx>
 
 	* Parser.pm (_parse_start_tag): More default attribute support.
